chore: reformat invoice implementation